--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,10 +10,10 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    - name: Set up JDK 11
+    - name: Set up JDK 17
       uses: actions/setup-java@v2
       with:
-        java-version: '11'
+        java-version: '17'
         distribution: 'adopt' # Specify the distribution
 
     - name: Compile project
@@ -30,13 +30,13 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    - name: Set up JDK 11
+    - name: Set up JDK 17
       uses: actions/setup-java@v2
       with:
-        java-version: '11'
+        java-version: '17'
         distribution: 'adopt' # Specify the distribution
 
     - name: SonarQube Scan
       env:
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      run: ./gradlew sonarqube -Dsonar.projectKey=Veillette87_LOG8371_TP1 -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+        SONAR_TOKEN: ${{ secrets.TP1_TOKEN }}
+      run: ./gradlew sonarqube -Dsonar.projectKey=Veillette87_LOG8371_TP1 -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{ secrets.TP1_TOKEN }}
