--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,4 +39,4 @@ jobs:
     - name: SonarQube Scan
       env:
         SONAR_TOKEN: ${{ secrets.TP1_TOKEN }}
-      run: ./gradlew sonarqube -Dsonar.projectKey=Veillette87_LOG8371_TP1 -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{ secrets.TP1_TOKEN }}
+      run: ./gradlew sonar -Dsonar.projectKey=Veillette87_LOG8371_TP1 -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{ secrets.TP1_TOKEN }}
