--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,4 @@ jobs:
         distribution: 'adopt'
 
     - name: SonarQube Scan
-      env:
-        SONAR_TOKEN: ${{ secrets.TP1_TOKEN }}
-      run: ./gradlew sonar -Dsonar.projectKey=Veillette87_LOG8371_TP1 -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{ secrets.TP1_TOKEN }}
+      run: ./start.sh
